<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/prompt_name"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_height="wrap_content"  />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/prompt_age"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_height="wrap_content"  />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/prompt_username"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"  />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/prompt_password"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"  />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bSignup"
        android:text="@string/reg_bn_label"
        style="@android:style/TextAppearance.Small"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:background="@drawable/button_selector"
        android:layout_height="wrap_content"
        />

</LinearLayout>