<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    >

    <TextView
        android:id="@+id/tx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_username"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/textColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/tx2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bLogin"
        android:text="@string/login_bn_label"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        />

    <TextView
        android:id="@+id/tvSignupLink"
        android:layout_width="wrap_content"
        android:text="@string/sign_up_text"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        />

</LinearLayout>