<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/diseasesBack"
    tools:context=".Interface31">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/head1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If someone is unconscious and breathing"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/txtDetails1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/head1"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />


        <TextView
            android:id="@+id/head2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If someone is conscious and breathing"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails1"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/head2"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/head3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Common injuries:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails2"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/head3"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/head4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•	Anaphylaxis:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails3"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/head4"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/anaphylaxis"
            android:layout_below="@+id/txtDetails4"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/txtDetails5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/image1"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/head5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•	Bleeding:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails9"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bleeding"
            android:layout_below="@+id/head5"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/txtDetails6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/image2"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/head6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•	Drowning:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails11"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/image3"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drown"
            android:layout_below="@+id/head6"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/head7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•	Poisoning:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails12"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="TextView"
            android:inputType="textMultiLine"
            android:textSize="20dp"
            android:layout_below="@+id/head7"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/head8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Video links:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails5"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/txtDetails9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text5"
            android:clickable="true"
            android:linksClickable="true"
            android:textSize="20dp"
            android:layout_below="@+id/head8"
            android:textColor="#000000"
            android:typeface="serif"
            android:autoLink="web"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
        />
        <TextView
            android:id="@+id/head9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Video links:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails6"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text6"
            android:clickable="true"
            android:linksClickable="true"
            android:textSize="20dp"
            android:layout_below="@+id/head9"
            android:textColor="#000000"
            android:typeface="serif"
            android:autoLink="web"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        />
        <TextView
            android:id="@+id/txtDetails11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text7"
            android:clickable="true"
            android:linksClickable="true"
            android:textSize="20dp"
            android:layout_below="@+id/txtDetails10"
            android:textColor="#000000"
            android:typeface="serif"
            android:autoLink="web"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        />
        <TextView
            android:id="@+id/head10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Video links:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails7"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text8"
            android:clickable="true"
            android:linksClickable="true"
            android:textSize="20dp"
            android:layout_below="@+id/head10"
            android:textColor="#000000"
            android:typeface="serif"
            android:autoLink="web"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        />
        <TextView
            android:id="@+id/head11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Video links:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_below="@+id/txtDetails8"
            android:typeface="serif"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtDetails13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text9"
            android:clickable="true"
            android:linksClickable="true"
            android:textSize="20dp"
            android:layout_below="@+id/head11"
            android:textColor="#000000"
            android:typeface="serif"
            android:autoLink="web"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        />










    </RelativeLayout>
    ></ScrollView>